--- a/Sources/Related.tex
+++ b/Sources/Related.tex
@@ -710,8 +710,8 @@ sufficient as an internal language for conventional ML modules.
 Furthermore, \citet{Rossberg_2015} proposed a redesign of ML in which modules are truly
 first-class values, thus unifying the core and module layers into one language.
 
-Module systems usually put more emphasis on supporting type abstraction. Support
-for type abstraction adds considerable complexity, which is not needed in
+Module systems usually put more emphasis on supporting data abstraction. Support
+for data abstraction adds considerable complexity, which is not needed in
 \sedel. \sedel is focused on OOP and supports, among others, method overriding,
 self references and dynamic dispatching, which (generally speaking) are all
 missing features in module systems.
