--- a/Sources/Conclusion.tex
+++ b/Sources/Conclusion.tex
@@ -30,7 +30,7 @@ increasing expressiveness:
 
 Throughout the thesis, we have demonstrated that disjoint intersection types have great
 potential to serve as a foundation for powerful, flexible and yet type-safe and
-easy-to-reason object-oriented languages. We hope that the concepts and the
+easy to reason object-oriented languages. We hope that the concepts and the
 methods described in this thesis may serve as a helpful guide to researchers and
 programmers alike in their attempts to understand and build better software.
 Thus this thesis serves as a stepping stone for further investigation of
