--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -34,8 +34,7 @@ Programs are hard to write. It was so 50 years ago at the time of the so-called
 nowadays, as the software we use daily is getting more and more complex and hard
 to maintain. Over the years, we have learned---the hard way---that software
 should be constructed in a \textit{modular} way, i.e., as a network of smaller
-modules; and that the weaker the dependencies between program modules, the more
-robust the program structure will be. To help programmers write modular code,
+and loosely connected modules. To help programmers write modular code,
 researchers and software practitioners have developed new methodologies; new
 programming paradigms; more expressive type systems; as well as better tooling
 support. Still, this is not enough to cope with today's needs. We will mention
@@ -104,7 +103,7 @@ mainstream object-oriented languages (such as Java and C++) is perhaps the most
 well-known and well-studied mechanism. However, programmers have long realized
 that single inheritance is not flexible enough when it comes to structuring a
 class hierarchy: it works for small and simple extensions, but does not work
-well for larger codebase such as compilers and operating systems. There
+well for larger software systems such as compilers and operating systems. There
 has been great interest in the past several years in mechanisms for providing
 greater extensibility in object-oriented languages. Of particular relevance to
 the subject of this thesis is three powerful linguistic mechanisms to foster software
@@ -335,11 +334,12 @@ ambiguity arises from multiple inheritance. This makes reasoning a lot simpler.
 
 The main goal of this thesis is to significantly increase the expressiveness of
 disjoint intersection types by extending the simple forms of multiple
-inheritance/composition supported by prior work~\citep{alpuimdisjoint, oliveira2016disjoint} into a more powerful form
-supporting nested composition. On the pragmatic side, the outcome is a language
-with support for first-class traits and nested composition. On the theoretical
-side, we put disjoint intersection types on a solid footing by exploring their
-meta-theoretical properties using logical relations.
+inheritance/composition supported by prior work~\citep{alpuimdisjoint, oliveira2016disjoint}
+into a more powerful form supporting nested composition.
+On the pragmatic side, the outcome is a programming language with support for
+first-class traits, dynamic inheritance and nested composition. On the
+theoretical side, we put disjoint intersection types on a solid footing by
+exploring their meta-theoretical properties using logical relations.
 
 
 \section{Contributions}
@@ -448,12 +448,12 @@ In summary the contributions of this thesis are:
 
 \item A full-blown implementation of \sedel; it runs and type-checks all the
   examples in this thesis.\footnote{The Coq formalization and implementation are
-    available at \url{https://github.com/bixuanzju/phd-thesis-artifact}.} We also conduct a case study,
-  which shows that support for composition of Object
-  Algebras~\citep{oliveira2012extensibility} is greatly
-  improved in \sedel. Using such improved design patterns we re-code the
-  interpreters from an undergraduate textbook on programming
-  languages~\citep{poplcook} in a modular way.
+    available at \url{https://github.com/bixuanzju/phd-thesis-artifact}.} We
+  also conduct a case study, which shows that support for composition of Object
+  Algebras~\citep{oliveira2012extensibility} is greatly improved in \sedel.
+  Using such improved design patterns we re-code the interpreters from an
+  undergraduate textbook on programming languages~\citep{poplcook} in a modular
+  way.
 
 \end{itemize}
 
