--- a/Sources/Abstract.tex
+++ b/Sources/Abstract.tex
@@ -35,7 +35,7 @@ coercions. To address the second problem, this thesis proposes a powerful proof
 method to establish coherence. Thus this thesis puts disjoint intersection types
 on a solid footing by thoroughly exploring their meta-theoretical properties.
 
-On the pragmatic side, this thesis propose a new language design with support
+On the pragmatic side, this thesis proposes a new language design with support
 for \textit{first-class traits}, \textit{dynamic inheritance} and nested
 composition. First-class traits allows two objects of statically unknown types
 to be composed without conflicts. Dynamic inheritance allows a class to inherit
