--- a/acknowledgement.tex
+++ b/acknowledgement.tex
@@ -6,9 +6,10 @@ and guidelines. He helped revise my papers and this thesis, continuously nudging
 me to make my writing more clearer. His feedback is nothing short of inspiring,
 which I greatly enjoyed. Secondly, I would like to express my gratitude to Prof.
 Tom Schrijvers from KU Leuven. I enjoyed very much our collaboration on a topic
-of mutual interest, which lead to my first publication. I learned a lot from
-you! During the years I spent at HKU, I had the opportunity to collaborate with
-a number of excellent fellow researchers, to name a few, Tomas Tauber, Zhiyuan
-Shi, Weixin Zhang, Huang Li, Yanpeng Yang and Ningning Xie. Last but not least,
-I would love to thank my family for being extremely supportive throughout my
-studies. I made it through thanks to all of you.
+of mutual interest, which lead to one of the key publications for this PhD
+dissertation. I learned a lot from you! During the years I spent at HKU, I had
+the opportunity to collaborate with a number of excellent fellow researchers, to
+name a few, Tomas Tauber, Zhiyuan Shi, Weixin Zhang, Huang Li, Yanpeng Yang and
+Ningning Xie. Last but not least, I would love to thank my family for being
+extremely supportive throughout my studies. I made it through thanks to all of
+you.
